Fix/Fixes-X-Overflow

--- a/styles/banner.module.scss
+++ b/styles/banner.module.scss
@@ -16,7 +16,7 @@
   position: absolute;
   top: 0vh;
   left: 5vw;
-  width: 100%;
+  width: 80vw;
 }
 
 .title a:hover,
